[package]
name = "woolyrust"
version = "0.4.0"
edition = "2021"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"

[dependencies]
anyhow = "1.0.86"

[features]
cuda = []

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
# metal is automatically assumed on macos builds